src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Stock_Image__c</fullName>
        <label>Stock Image</label>
        <picklist>
            <picklistValues>
                <fullName>Milk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nuts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Truffles</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>campaignPage__c</fullName>
        <label>Campaign Page</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>image__c</fullName>
        <label>Campaign Image</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>pic__c</fullName>
        <formula>IMAGE(image__c, &apos;Image&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>publishDate__c</fullName>
        <label>Publish Date</label>
        <type>Date</type>
    </fields>
</CustomObject>